--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FAQ</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,10 +18,10 @@
     <div class="container">
       <h1 class="title">Frequently Asked Questions:</h1>
       <div class="questions-container">
-        <div class="question open-question">
+        <div class="question">
           <div>
             <h2>What's the name ?</h2>
-            <p>Answer</p>
+            <p>eh</p>
           </div>
           <i class="fa-solid fa-chevron-down"></i>
           <i class="fa-regular fa-circle-xmark xmark"></i>
